src/css/main/base.less
html {
    font-size: 62.5%;
}

body {
    font-family: Arial;
    font-size: 1.6rem;
    line-height: 1.4em;
    margin: 0;
}

#content, #bodytext {
	padding: 5rem 0;

	 h1 {
		font-weight: bold;
        font-size: 3.6rem;
        line-height: 1.1em;
        margin: 0 0 3rem 0;
	} 

    .date {
        margin-bottom: 2rem;
    }

	h2 {
		text-align: left;
        margin-top: 0;
        margin-bottom: 1rem;
	}

    img  {
        max-width: 100%;
        width: auto;
        height: auto;
    }

    p {
        line-height: 1.7;
    }

    main {
        h2 {
            color: @blue;
            margin-top: 2rem;
        }

        h3 {
            color: fade(@black, 70%);
        }
    }
}

#main {
    a {
        text-decoration: none;
        color: lighten(@black, 50%);
        &:hover {
            color: @blue;   
        }
    }
}

section {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

blockquote {
    color: @blue;
    font-style: italic;
    font-weight: bold;
    position: relative;
    padding-left: 2rem;
    margin: 4rem 2rem;

    &:after {
        display: block;
        content: '"';
        position: absolute;
        top: 0;
        left: 0;
        font-size: 3rem;
    }
}

